# callable_av_hubert

./: infer_avhubert.py  launch_infer.sh  main.py  pyproject.toml
additional_modules/fairseq/: pyproject.toml  setup.py
additional_modules/fairseq/fairseq/models/: __init__.py
additional_modules/fairseq/fairseq/tasks/: __init__.py  fairseq_task.py
src/avhubert/: hubert.py  hubert_asr.py  hubert_dataset.py  hubert_pretraining.py  infer_avhubert.py
src/avhubert/outputs/2026-01-13/16-08-51/.hydra/: config.yaml  hydra.yaml
