[project]
name = "avhubert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
  "editdistance==0.6.0",
  "fairseq",
  # "numpy<1.20",
  "opencv-python==4.5.4.60",
  "pdbpp>=0.11.7",
  "pip>=25.0.1",
  "python-speech-features==0.6",
  "scipy==1.10.0",
  "sentencepiece==0.1.96",
  "numpy==1.23.0",
]

[tool.uv.sources]
fairseq = { path = "additional_modules/fairseq", editable = true }


[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"


[tool.setuptools.packages.find]
where = ["./additional_modules/fairseq", "src/"]
include = ["*"]
exclude = ["tests*"]
