[project]
name = "avhubert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
  "setuptools",
  "numpy==1.23.0",
  "editdistance==0.6.0",
  "fairseq",
  "opencv-python==4.5.4.60",
  "pdbpp>=0.11.7",
  "pip>=25.0.1",
  "python-speech-features==0.6",
  "scipy==1.10.0",
  "sentencepiece==0.1.96",
]

[tool.uv.sources]
fairseq = { path = "additional_modules/fairseq", editable = false }


# [build-system]
# requires = ["uv_build>=0.9.26,<0.10.0", "setuptools"]
# build-backend = "uv_build"
#
[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["./additional_modules/fairseq", "src/"]
include = ["*"]
exclude = ["tests*"]

[project.scripts]
vsr_baseline_avhubert = "avhubert.infer_avhubert:main"
